# heirarchical-data

./: README.md  pyproject.toml
hierarchicaldata/: db.sqlite3
hierarchicaldata/hierarchicaldata/: models.py  settings.py  urls.py  views.py
hierarchicaldata/hierarchicaldata/migrations/: 0001_initial.py  0002_auto_20200306_0813.py
